--- a/TasksManager/TasksManager.vcxproj.filters
+++ b/TasksManager/TasksManager.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Worker.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="TasksManager.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Worker.hpp">
